crdp-routes/crdp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crdp-route-http
spec:
  hostnames:
  - placeholder.kiukairor.local # do not change; this will be populated by the replacement in kustomization.yaml
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx-gateway
    namespace: nginx-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: crdp-svc
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /
